# lmlab

./: .gitignore  README  README.md  app.js  docker-compose.yml  index.html  lmlab.service  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  style.css  tsconfig.json
.github/workflows/: push-to-docker.yml
docker/: Dockerfile  docker-compose.yml
lmlab/: app.py
lmlab/src/: next.ts  pos.ts  seq.ts  tokenizers.ts
lmlab/static/: style.css  suc_tags.html
lmlab/templates/: index.html
